<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.screen.LoginFragment">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/registerImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_repeatMode="restart"
                app:lottie_fileName="hello.json" />

            <RelativeLayout
                android:id="@+id/emailEditText"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:background="@drawable/input_field_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerImage">

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:paddingStart="@dimen/space_6"
                    android:paddingEnd="@dimen/space_6"
                    android:drawablePadding="@dimen/space_6"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/hintColor"
                    android:layout_toStartOf="@+id/emailEndIcon"

                    android:layout_alignParentStart="true"
                    android:drawableTint="@color/primary"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    android:maxLines="@integer/one"
                    android:background="#00000000"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:autofillHints="JohnDoe@example.com" />

                <ImageView
                    android:id="@+id/emailEndIcon"
                    android:src="@drawable/xmark"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    app:tint="@color/primary"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/email_end_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/space_6"
                    android:layout_alignTop="@+id/emailField"
                    android:layout_alignBottom="@+id/emailField"
                    />

            </RelativeLayout>


            <TextView
                android:id="@+id/emailMsg"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"
                app:layout_constraintLeft_toLeftOf="@+id/emailEditText"
                app:layout_constraintRight_toRightOf="@+id/emailEditText"
                android:text="@string/this_is_demo_text_to_see_if_this_is_alright"
                />

            <RelativeLayout
                android:id="@+id/passwordEditText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_6"
                android:background="@drawable/input_field_background"
                app:layout_constraintTop_toBottomOf="@+id/emailMsg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >
                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="350dp"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/space_6"
                    android:paddingEnd="@dimen/space_6"
                    android:drawablePadding="@dimen/space_6"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:layout_marginTop="5dp"
                    android:drawableTint="@color/primary"
                    android:background="#00000000"
                    android:layout_toStartOf="@+id/passwordEndIcon"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:textColorHint="@color/hintColor"
                    android:hint="@string/password"
                    android:maxLines="@integer/one"
                    android:ellipsize="end"
                    android:autofillHints="Type your password"
                    />

                <ImageView
                    android:id="@+id/passwordEndIcon"
                    android:src="@drawable/eye_slash"
                    android:layout_width="wrap_content"
                    app:tint="@color/primary"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/email_end_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/space_6"
                    android:layout_alignTop="@+id/passwordField"
                    android:layout_alignBottom="@+id/passwordField"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/passMsg"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                app:layout_constraintLeft_toLeftOf="@+id/passwordEditText"
                app:layout_constraintRight_toRightOf="@+id/passwordEditText"
                android:text="@string/this_is_demo_text_to_see_if_this_is_alright"
                />


            <RelativeLayout
                android:id="@+id/loginBtn"
                android:layout_width="350dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@+id/passMsg"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="@+id/passMsg"
                app:layout_constraintRight_toRightOf="@+id/passMsg"
                android:background="@drawable/button_background"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/loginBtn"
                app:layout_constraintLeft_toRightOf="@+id/loginBtn"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn"
                android:layout_marginTop="@dimen/space_12"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_register_yet"
                    android:textSize="13sp"
                    />
                <TextView
                    android:id="@+id/gotoRegister"
                    android:layout_marginStart="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small_register"
                    android:textSize="13sp"
                    android:textColor="@color/primary"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


